cny2023-bingo.css
body {
    margin: 0;
    padding: 0;
    padding-top: 30px;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    background-color: #900000;
    color: #FCDA53;
    text-align: center;
}

body:focus {
    outline: none;
}

.container {
    width: 100vw;
    display: flex;
    justify-content: center;
}

#tblBingo {
    border-collapse: collapse;
    height: 25rem;
    width: 25rem;
    text-align: center;
    font-size: 22pt;
    cursor: pointer;
}

#tblBingo td {
    padding: 0.3rem;
 }

.cell-format {
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 20%;
    border: 2px solid #FCDA53;
}

.cell-format:hover {
    background-color: #FCDA53;
    color: #900000;
}

.letter-div {
    height: 20vh;
    display: flex;
    justify-content: center;
    align-items: center;
}

.letters-bingo {
    padding: 0 1.3rem;
    font-size: 40pt;
    display: none;
}

.strickout {
    /* original */
    /* text-decoration: line-through; */
    color: #900000;
    /* font-size: 24pt; */
    /* pointer-events: none; */
    /* added */
    border-radius: 20%;
    border: 2px solid #FCDA53;
    background-color: #FCDA53;
    /* font-weight: bold; */
}

.show-bingo {
    display: inline;
}

